--- a/.env
+++ b/.env
@@ -1,1 +1,2 @@
-BACKEND_URL=https://helpyzo-backend.vercel.app
+# BACKEND_URL=https://helpyzo-backend.vercel.app
+BACKEND_URL=http://localhost:5000/api
