--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-# BACKEND_URL=https://helpyzo-backend.vercel.app
-BACKEND_URL=http://localhost:5000/api
+BACKEND_URL=https://helpyzo-backend.vercel.app/api
+# BACKEND_URL=http://localhost:5000/api
