change superadmin panel ui & fix other issues

--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
-BACKEND_URL=https://helpyzo-backend.vercel.app/api
-# BACKEND_URL=http://localhost:5000/api
+# VITE_BACKEND_URL=https://helpyzo-backend.vercel.app/api
+VITE_BACKEND_URL=http://localhost:5000/api
