add new changes

--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 # VITE_BACKEND_URL=https://helpyzo-backend.vercel.app/api
 VITE_BACKEND_URL=http://localhost:5000/api
+VITE_RAZORPAY_KEY_ID=rzp_test_SL8zQiJKiptbP9
